examples/test/testpolicy4981.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4981
  namespace: namespace102
spec:
  podSelector:
    matchLabels:
      key6: value19
      key39: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value3
      podSelector:
        matchLabels:
          key42: value19
          key4: value36
